2007-10-09       Gaius Mulley <gaius@gnu.org>

	* gm2/README:  updated to reflect new homepage and mailing
	  list address.

2007-10-07       Gaius Mulley <gaius@gnu.org>

	* fixed bug reported by Dmitry Shatrov <shatrov@gmail.com>
	* gm2/gm2-compiler/M2Quads.mod:  added CheckNotConstAndVar
	  procedure.  BuildAssignment use CheckNotConstAndVar.
	* gm2/testsuite/gm2/pim/fail/constvar.mod:  added new
	  regression test.
	* gm2/gm2.texi:  updated the last update field.

2007-10-05       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  updated version to 0.62
	* gm2/Make-lang.in:  altered all -W options to their new
	  -f counterparts
	* gm2/README:  modified the advised build command
	* gm2/gccgm2.c:  removed all section of code inside #if 0
	  blocks (which were not part of the orig gcc source).
	* gm2/gccgm2.c:  modified OPT_W to OPT_f to reflect change
	  of -W flags to -f flags.
	* gm2/gccgm2.c:  reintroduced the -fcpp handling code.
	* gm2/gm2.texi:  updated version number to 0.62
	* gm2/gm2.texi:  altered all -W options to -f options
	  for code generation options.  Left warning options
	  to use -W to mirror the gcc paradigm.
	* gm2/gm2/gm2builtins.c:  memmove introduced.
	* gm2/gm2spec.c:  changed all -W options to -f.
	* gm2/lang-specs.h:  changed all -W options to -f.
	* gm2/lang.opt:  changed all -W options to -f.
	* gm2/bnf/gm2l.bnf:  changed all -W options to -f.
	* gm2/bnf/gm2m.bnf:  changed all -W options to -f.
	* gm2/gm2-libs-pim/BlockOps.{def,mod}:  added to repository.
	* gm2/examples/map/Makefile:  changed all -W options to -f and
	  added -O3.
	* gm2/gm2/gm2-compiler/M2Options.def:  changed comments.
	* gm2/gm2-compiler/M2Options.mod:  changed all -W options to -f.
	* gm2/gm2-compiler/M2Quads.mod:  changed all -W options to -f.
	* gm2/gm2-compiler/SymbolTable.mod:  changed all -W options to -f.
	* gm2/gm2-compiler/gm2.mod:  changed all -W options to -f.
	* gm2/gm2-compiler/gm2lcc.mod:  changed all -W options to -f.